# pyriscv

./: .gitignore  .pre-commit-config.yaml  README.md  arch_tests.py  assem.py  pyproject.toml  ram.py  rv32i.py  test_systems.py  test_utils.py  utils.py
docs/: example_projects.md  riscof_setup.md  todo.md
firmware/: Makefile  basic_asm.S  basic_c.c  sections.lds  start.S
pyriscv/: assem.py  cli.py  mem.py  rv32i.py  utils.py
riscof/: config.ini
riscof/pyriscv/: pyriscv_isa.yaml  riscof_pyriscv.py
riscof/pyriscv/env/: model_test.h
riscof/sail_cSim/: riscof_sail_cSim.py
tests/: alu_tests.py  test_instrs.py  test_utils.py
