[project]
name = "pyriscv"
version = "0.1.0"
description = "RISC-V emulator for the RV32I instruction set"
requires-python = ">=3.10"
dependencies = [
    "numpy~=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "riscof~=1.25.3",
]

[project.scripts]
pyriscv = "pyriscv.cli:pyriscv"
pyriscv-riscof = "pyriscv.cli:riscof"

[build-system]
requires = ["setuptools>=45"]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
namespaces = false
